--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-plugin-styled-components": "^1.10.6",
     "gatsby": "^2.13.3",
     "gatsby-plugin-styled-components": "^3.1.0",
+    "gatsby-source-filesystem": "^2.1.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-icons": "^3.7.0",
