--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.6",
     "gatsby": "^2.13.3",
+    "gatsby-background-image": "^0.8.0",
+    "gatsby-image": "^2.2.6",
+    "gatsby-plugin-sharp": "^2.2.9",
     "gatsby-plugin-styled-components": "^3.1.0",
     "gatsby-source-filesystem": "^2.1.3",
+    "gatsby-transformer-sharp": "^2.2.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-icons": "^3.7.0",
