--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "gatsby-image": "^2.2.6",
     "gatsby-plugin-sharp": "^2.2.9",
     "gatsby-plugin-styled-components": "^3.1.0",
+    "gatsby-plugin-transition-link": "^1.12.4",
     "gatsby-source-filesystem": "^2.1.3",
     "gatsby-transformer-sharp": "^2.2.4",
+    "gsap": "^2.1.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-icons": "^3.7.0",
