--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.6",
+    "dotenv": "^8.1.0",
     "gatsby": "^2.13.3",
     "gatsby-background-image": "^0.8.0",
     "gatsby-image": "^2.2.6",
     "gatsby-plugin-sharp": "^2.2.9",
     "gatsby-plugin-styled-components": "^3.1.0",
     "gatsby-plugin-transition-link": "^1.12.4",
+    "gatsby-source-contentful": "^2.1.29",
     "gatsby-source-filesystem": "^2.1.3",
     "gatsby-transformer-sharp": "^2.2.4",
     "gsap": "^2.1.3",
