--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby": "^2.13.3",
     "gatsby-background-image": "^0.8.0",
     "gatsby-image": "^2.2.6",
+    "gatsby-plugin-playground": "^1.0.6",
     "gatsby-plugin-sharp": "^2.2.9",
     "gatsby-plugin-styled-components": "^3.1.0",
     "gatsby-plugin-transition-link": "^1.12.4",
