--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-background-image": "^0.8.0",
     "gatsby-image": "^2.2.6",
     "gatsby-plugin-playground": "^1.0.6",
+    "gatsby-plugin-react-helmet": "^3.1.7",
     "gatsby-plugin-sharp": "^2.2.9",
     "gatsby-plugin-styled-components": "^3.1.0",
     "gatsby-plugin-transition-link": "^1.12.4",
@@ -29,6 +30,7 @@
     "gsap": "^2.1.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
     "react-icons": "^3.7.0",
     "styled-components": "^4.3.2"
   },
