--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "gatsby-image": "^2.2.18",
     "gatsby-plugin-playground": "^1.0.6",
     "gatsby-plugin-react-helmet": "^3.1.7",
+    "gatsby-plugin-robots-txt": "^1.5.0",
     "gatsby-plugin-sharp": "^2.2.21",
+    "gatsby-plugin-sitemap": "^2.2.12",
     "gatsby-plugin-styled-components": "^3.1.5",
     "gatsby-plugin-transition-link": "^1.13.0",
     "gatsby-source-contentful": "^2.1.35",
